# Google-Agent-Development-Kit_ADK_and_Agent2Agent_A2A_protocol

./: README.md  pyproject.toml  streamlit_app.py
agents/activities_agent/: __main__.py  agent.py  task_manager.py
agents/activities_agent/.well-known/: agent.json
agents/flight_agent/: __main__.py  agent.py
agents/flight_agent/.well-known/: agent.json
agents/host_agent/: __main__.py  agent.py  task_manager.py
agents/host_agent/.well-known/: agent.json
agents/stay_agent/: __main__.py  agent.py  task_manager.py
agents/stay_agent/.well-known/: agent.json
common/: a2a_client.py  a2a_server.py
shared/: schemas.py
